# XLauchez

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  theme.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  offline.rs
src-tauri/src/minecraft/: assets.rs  launch.rs  mod.rs  version.rs
