[package]
name = "xlauchez"
version = "0.1.0"
edition = "2021"
description = "XLauchez — fast, free, yours."
license = "MPL-2.0"
authors = []

[lib]
name = "xlauchez_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

thiserror = "2"
uuid      = { version = "1", features = ["v4", "serde"] }
dirs      = "5"
opener    = "0.7"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
